# SparkFlow_Delta_Pipeline

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REPO_STRUCTURE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/components/: charts.py
dashboard/pages/: 01_overview.py  02_fraud_analysis.py  03_optimizations.py
data/raw/merchants/: .part-00000-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet.crc  .part-00001-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet.crc  .part-00002-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet.crc  .part-00003-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet.crc  part-00000-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet  part-00001-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet  part-00002-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet  part-00003-870f3cc6-27fa-40a5-9e6f-087b271ae2ce-c000.zstd.parquet
data/seed/: sample_transactions.csv
docker/spark/: Dockerfile  spark-defaults.conf
docker/streamlit/: Dockerfile
docs/: OPTIMIZATIONS.md  PROJECT_CONTEXT.md
docs/images/: IMAGENES-NECESARIAS.md
notebooks/: 01_ingesta_bronze.ipynb  02_transformaciones_silver_gold.ipynb  03_analisis_fraude_reportes.ipynb
scripts/: download_data.sh  generate_data.py  generate_images.py
src/: config.py  data_generator.py  fraud_rules.py  transformations.py  utils.py
tests/: conftest.py  test_data_generator.py  test_fraud_rules.py  test_transformations.py
